# mini_phone

./: .clang-format  .dockerignore  .gitignore  .rubocop.yml  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile.dev  Gemfile  LICENSE.txt  README.md  Rakefile  mini_phone.code-workspace  mini_phone.gemspec
.github/: ci.yml  dependabot.yml
.github/workflows/: ci.yml  release.yml
bench/: e164.rb  memory.rb  valid.rb
debug/memory_plot/: memory.rb  plot.sh
ext/mini_phone/: Cargo.toml  extconf.rb  mini_phone.cc  mini_phone.h
ext/mini_phone/src/: class_interface.rs  graphql_schema.rs  lib.rs  phone_number.rs  traits.rs
lib/: mini_phone.rb
lib/mini_phone/: version.rb
spec/: mini_phone_spec.rb  smoke_spec.rb  spec_helper.rb
spec/mini_phone/: phone_number_spec.rb
